@@ -1,3 +1,8 @@
+Next
+    New Docs
+    * Documented differences from Perl 6
+
+
 20081008  Wed Oct  8 09:48:33 EDT 2008
     New Features
     * Named parameters have some basic compile-time error checks for illegal signatures.
